[gd_scene load_steps=4 format=3 uid="uid://c0b3s6cv80j6e"]

[ext_resource type="Script" path="res://scripts/options_menu.gd" id="1_ysv0m"]
[ext_resource type="Texture2D" uid="uid://civmffyad70rv" path="res://assets/close_128.png" id="2_wqv6f"]
[ext_resource type="Shortcut" uid="uid://dcr5q3fqlxka7" path="res://shortcuts/esc_press.tres" id="3_q2dqp"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ysv0m")

[node name="OptionsMenuSubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
stretch = true

[node name="SubViewport" type="SubViewport" parent="OptionsMenuSubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="Panel" type="Panel" parent="OptionsMenuSubViewportContainer/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"MenuShade"

[node name="OptionsPanelContainer" type="PanelContainer" parent="OptionsMenuSubViewportContainer/SubViewport"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.0
offset_top = -74.5
offset_right = 87.0
offset_bottom = 74.5
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="OptionsMenuSubViewportContainer/SubViewport/OptionsPanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsMenuSubViewportContainer/SubViewport/OptionsPanelContainer/MarginContainer"]
layout_mode = 2

[node name="KeyboardShortcutsSectionLabel" type="Label" parent="OptionsMenuSubViewportContainer/SubViewport/OptionsPanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Keyboard Shortcuts"
horizontal_alignment = 1

[node name="KeyboardShortcuts" type="Label" parent="OptionsMenuSubViewportContainer/SubViewport/OptionsPanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "ESC = Close book/container/item
Space = Open/close book
O = open Options when in-game"

[node name="VolumeLevelsSectionLabel" type="Label" parent="OptionsMenuSubViewportContainer/SubViewport/OptionsPanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volume Levels"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsMenuSubViewportContainer/SubViewport/OptionsPanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="OptionsMenuSubViewportContainer/SubViewport/OptionsPanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="OptionsMenuSubViewportContainer/SubViewport/OptionsPanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 10
focus_neighbor_top = NodePath("../../BackButton")
max_value = 1.0
step = 0.01

[node name="HBoxContainer2" type="HBoxContainer" parent="OptionsMenuSubViewportContainer/SubViewport/OptionsPanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="OptionsMenuSubViewportContainer/SubViewport/OptionsPanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Sound Effects"

[node name="SfxSlider" type="HSlider" parent="OptionsMenuSubViewportContainer/SubViewport/OptionsPanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 10
max_value = 1.0
step = 0.01

[node name="HBoxContainer3" type="HBoxContainer" parent="OptionsMenuSubViewportContainer/SubViewport/OptionsPanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="OptionsMenuSubViewportContainer/SubViewport/OptionsPanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Music"

[node name="MusicSlider" type="HSlider" parent="OptionsMenuSubViewportContainer/SubViewport/OptionsPanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 10
max_value = 1.0
step = 0.01

[node name="BackButton" type="Button" parent="OptionsMenuSubViewportContainer/SubViewport/OptionsPanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_right = NodePath("../../../../MarginContainer/QuitButtonContainer/MarginContainer/QuitButton")
focus_neighbor_bottom = NodePath("../HBoxContainer/MasterSlider")
focus_next = NodePath("../../../../MarginContainer/QuitButtonContainer/MarginContainer/QuitButton")
text = "Back"

[node name="MarginContainer" type="MarginContainer" parent="OptionsMenuSubViewportContainer/SubViewport"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -172.0
offset_top = -111.0
grow_horizontal = 0
grow_vertical = 0

[node name="QuitButtonContainer" type="PanelContainer" parent="OptionsMenuSubViewportContainer/SubViewport/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="OptionsMenuSubViewportContainer/SubViewport/MarginContainer/QuitButtonContainer"]
layout_mode = 2

[node name="QuitButton" type="Button" parent="OptionsMenuSubViewportContainer/SubViewport/MarginContainer/QuitButtonContainer/MarginContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../../../../OptionsPanelContainer/MarginContainer/VBoxContainer/BackButton")
focus_neighbor_top = NodePath("../../../../OptionsPanelContainer/MarginContainer/VBoxContainer/BackButton")
focus_neighbor_bottom = NodePath("../../../../OptionsPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/MasterSlider")
focus_previous = NodePath("../../../../OptionsPanelContainer/MarginContainer/VBoxContainer/BackButton")
text = "Quit Game
"

[node name="CloseButtonPanelContainer" type="PanelContainer" parent="OptionsMenuSubViewportContainer/SubViewport"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -128.0
offset_bottom = 128.0
grow_horizontal = 0
mouse_filter = 1
theme_type_variation = &"BookPanel"

[node name="CloseTextureRect" type="TextureRect" parent="OptionsMenuSubViewportContainer/SubViewport/CloseButtonPanelContainer"]
layout_mode = 2
texture = ExtResource("2_wqv6f")

[node name="CloseButton" type="Button" parent="OptionsMenuSubViewportContainer/SubViewport/CloseButtonPanelContainer"]
layout_mode = 2
tooltip_text = "Close"
shortcut = ExtResource("3_q2dqp")

[connection signal="value_changed" from="OptionsMenuSubViewportContainer/SubViewport/OptionsPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="OptionsMenuSubViewportContainer/SubViewport/OptionsPanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/SfxSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="OptionsMenuSubViewportContainer/SubViewport/OptionsPanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="pressed" from="OptionsMenuSubViewportContainer/SubViewport/OptionsPanelContainer/MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="OptionsMenuSubViewportContainer/SubViewport/MarginContainer/QuitButtonContainer/MarginContainer/QuitButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="OptionsMenuSubViewportContainer/SubViewport/CloseButtonPanelContainer/CloseButton" to="." method="_on_back_button_pressed"]
